# spectro-dp

./: .gitignore  LICENSE  README.md  environment.yml  environment_dev.yml  setup.cfg
.github/workflows/: pytest_flake8.yml
DISORT/: README.md  asd_albedo.f90  compile.sh  disort_variables.f90  getopt.F90  ssa_ice.f90
src/spectro_dp/asd/: __init__.py  albedo.py  measurement_composite.py  measurement_file.py  plotter.py  reflectance.py  white_reference.py
tests/: conftest.py
tests/asd/: test_measurement_composite.py  test_measurement_file.py
tests/data/: 210317_a.000  210317_a.001  210317_a.002  210317_a.010  210317_a.011  210317_a.012
tests/data/white-reference/: 210317_a.000
