[metadata]
name = spectro_dp
version = 0.1
author = Joachim Meyer
author_email = j.meyer@utah.edu
description = Library for processing field spectrometer data
url= https://github.com/UofU-Cryosphere/spectro-dp
license = BSD-3

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    asd_albedo = spectro_dp.asd.albedo:cli
    asd_reflectatnce = spectro_dp.asd.reflectance:cli
